--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -144,6 +144,7 @@
     width: 100%;
     text-align: left;
     font-size: 18px;
+    color:black;
     font-weight: bold;
     background: none;
     border: none; /* Removes the border */
