--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -319,6 +319,11 @@ body {
 
 /* Responsive styles for mobile devices */
 @media (max-width: 768px) {
+  * {
+  word-wrap: break-word;
+  box-sizing: border-box;
+}
+
   .hero {
     flex-direction: column;
     height: auto;
@@ -341,7 +346,7 @@ body {
   }
 
   .hero-left h1 {
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-weight: bold;
   color: #2C3E50;
   margin-top: 40px; /* ✅ adds spacing at the top */
@@ -412,33 +417,7 @@ body {
 }
 
 
-  .image {
-    width: 200px;
-    height: auto;
-    margin-left: 0;
-  }
-
-  .image-rotated {
-    width: 150px;
-    bottom: -30px;
-    right: 20rem;
-    margin: 0;
-  }
-
-  .image-section .sprak {
-    margin: 0;
-    top: -24rem;
-    left: 30rem;
-  }
-
-  .image-section .arrow {
-    width: 60px;
-    margin: 0;
-    top: -3rem;
-    right: 14rem;
-    transform: rotate(85deg) scaleY(-1);
-  }
-
+  
   .testimonial-scroll-horizontal-wrapper {
     padding: 40px 0;
   }
